# UniDevPortfolio

./: .classpath  .gitignore  .project  Deep learning.odt  Esame-092023.pl  LICENSE  Operazioni-Git.txt  README.md
C - LASD/: C-LASD-Ubuntu  Makefile  Makefile.win  Tracce-Esame.dev  Tracce-Esame.layout  cmake_install.cmake  funzioni.c  libreria.h  main.c  tracce-esame.dev  tracce-esame.layout
C-Università/C - LASD/: CMakeCache.txt  CMakeLists.txt  tracce-esame
C-Università/C - LASD/Altro/ListeCircolari/: listecircolari.h.gch
C-Università/C - LASD/Soluzione-06-23/: ese2.c  ese3.c
Java - Personale/: .classpath  .project  build.gradle
ML/: Alberi.sml  FunExam.sml  FunGeneric.sml  FunMap.sml  prova.sml  reduce.sml
Progetto-DB/: Funzioni.sql  Popolazione.sql  Query-Ricerche.sql  Query-View.sql  README.md  Ricerche.sql  Script.sql  Trigger.sql  Viste-Query.sql
Progetto-OO/: .classpath  .project  src.uml
Prolog/: AltriEsercizi  Esercizi-Vari.pl  Esercizi-Vari.pl~  Grafo.pl  Lista esercizi.txt  concatenare e inversa.pl  divisibile per 3.pl  divisione per lunghezza.pl  fattoriale.pl  fattoriale.pl~  incremento e decremento.pl  lunghezza di una lista.pl  massimo e minimo.pl  max lista - esterno.pl  media.pl  occorrenze e i-esimo elemento.pl  operazioni base su liste.pl  pari e dispari.pl  positivi e negativi.pl  somma e prodotto.pl
Python/: AnalisiImmagine.py  Prova.py  RIC-IT.py  Ripristino-G.py  Ripristino-Google.py  Sommatoria.py
ReactNetive-Prova/: app.json  package-lock.json  package.json
SQL/: Eliminazione-Righe.sql  Traccia 08-10-19.sql
Utili/: SSH.txt  (+7 more)
(+2717 files in other folders)
